Clusters creados y agregados a dataset
Se hizo el analisis al dataset de 231 registros y se aplicó Kmeans para determiar 3 clusters, se agregaron a un nuevo dataset y se exportó

--- a/clustering_luminaria.ipynb
+++ b/clustering_luminaria.ipynb
@@ -1428,11 +1428,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "df132a91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Distribución de estudiantes por nivel de riesgo:\n",
+      "nivel_riesgo\n",
+      "Bajo Riesgo     59\n",
+      "Riesgo Medio    45\n",
+      "Alto Riesgo     30\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear un mapeo de clusters a niveles de riesgo\n",
+    "cluster_risk_mapping = {\n",
+    "    0: \"Alto Riesgo\",\n",
+    "    1: \"Riesgo Medio\",\n",
+    "    2: \"Bajo Riesgo\"\n",
+    "}\n",
+    "\n",
+    "# Agregar columna de nivel de riesgo\n",
+    "df_with_clusters['nivel_riesgo'] = df_with_clusters['cluster'].map(cluster_risk_mapping)\n",
+    "\n",
+    "# Mostrar distribución de niveles de riesgo\n",
+    "print(\"\\nDistribución de estudiantes por nivel de riesgo:\")\n",
+    "print(df_with_clusters['nivel_riesgo'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "83d91965",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>semestre_ord</th>\n",
+       "      <th>desmotivacion_bin</th>\n",
+       "      <th>considerado_abandonar_bin</th>\n",
+       "      <th>dificultades_economicas_bin</th>\n",
+       "      <th>empleo_ord</th>\n",
+       "      <th>impacto_laboral_ord</th>\n",
+       "      <th>reprobo_materias_bin</th>\n",
+       "      <th>apoyo_institucional_ord</th>\n",
+       "      <th>satisfaccion_servicios_ord</th>\n",
+       "      <th>actividades_extracurriculares_ord</th>\n",
+       "      <th>nivel_riesgo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7mo o más</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí, medio tiempo</td>\n",
+       "      <td>Algo</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Insatisfecho/a</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Alto Riesgo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7mo o más</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí, medio tiempo</td>\n",
+       "      <td>Algo</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Siempre</td>\n",
+       "      <td>Insatisfecho/a</td>\n",
+       "      <td>Sí, frecuentemente</td>\n",
+       "      <td>Alto Riesgo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1er - 3er</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Algo</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Insatisfecho/a</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>Riesgo Medio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1er - 3er</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí, medio tiempo</td>\n",
+       "      <td>Algo</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Satisfecho/a</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Alto Riesgo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7mo o más</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí, medio tiempo</td>\n",
+       "      <td>No afecta/No trabajo</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Algunas veces</td>\n",
+       "      <td>Satisfecho/a</td>\n",
+       "      <td>Sí, frecuentemente</td>\n",
+       "      <td>Bajo Riesgo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  semestre_ord desmotivacion_bin considerado_abandonar_bin  \\\n",
+       "0    7mo o más                No                        Sí   \n",
+       "1    7mo o más                No                        Sí   \n",
+       "2    1er - 3er                Si                        Sí   \n",
+       "3    1er - 3er                Si                        No   \n",
+       "4    7mo o más                No                        No   \n",
+       "\n",
+       "  dificultades_economicas_bin        empleo_ord   impacto_laboral_ord  \\\n",
+       "0                          No  Sí, medio tiempo                  Algo   \n",
+       "1                          Sí  Sí, medio tiempo                  Algo   \n",
+       "2                          Sí                No                  Algo   \n",
+       "3                          Sí  Sí, medio tiempo                  Algo   \n",
+       "4                          No  Sí, medio tiempo  No afecta/No trabajo   \n",
+       "\n",
+       "  reprobo_materias_bin apoyo_institucional_ord satisfaccion_servicios_ord  \\\n",
+       "0                   No           Algunas veces             Insatisfecho/a   \n",
+       "1                   No                 Siempre             Insatisfecho/a   \n",
+       "2                   No           Algunas veces             Insatisfecho/a   \n",
+       "3                   No           Algunas veces               Satisfecho/a   \n",
+       "4                   No           Algunas veces               Satisfecho/a   \n",
+       "\n",
+       "  actividades_extracurriculares_ord  nivel_riesgo  \n",
+       "0                     Algunas veces   Alto Riesgo  \n",
+       "1                Sí, frecuentemente   Alto Riesgo  \n",
+       "2                             Nunca  Riesgo Medio  \n",
+       "3                     Algunas veces   Alto Riesgo  \n",
+       "4                Sí, frecuentemente   Bajo Riesgo  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_with_clusters.drop(columns=['cluster'], inplace=True)\n",
+    "df_with_clusters.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6237f144",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset exportado con niveles de riesgo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_with_clusters.to_csv('./luminaria_con_niveles_de_riesgo.csv', index=False)\n",
+    "print(\"Dataset exportado con niveles de riesgo.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a06c38bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 134 entries, 0 to 133\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                             Non-Null Count  Dtype \n",
+      "---  ------                             --------------  ----- \n",
+      " 0   semestre_ord                       134 non-null    object\n",
+      " 1   desmotivacion_bin                  134 non-null    object\n",
+      " 2   considerado_abandonar_bin          134 non-null    object\n",
+      " 3   dificultades_economicas_bin        134 non-null    object\n",
+      " 4   empleo_ord                         134 non-null    object\n",
+      " 5   impacto_laboral_ord                134 non-null    object\n",
+      " 6   reprobo_materias_bin               134 non-null    object\n",
+      " 7   apoyo_institucional_ord            134 non-null    object\n",
+      " 8   satisfaccion_servicios_ord         134 non-null    object\n",
+      " 9   actividades_extracurriculares_ord  134 non-null    object\n",
+      " 10  nivel_riesgo                       134 non-null    object\n",
+      "dtypes: object(11)\n",
+      "memory usage: 11.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_csv('./luminaria_con_niveles_de_riesgo.csv').info()"
+   ]
   }
  ],
  "metadata": {
