Doc svm_luminaria

--- a/svm_luminaria.ipynb
+++ b/svm_luminaria.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d32f260",
+   "metadata": {},
+   "source": [
+    "## Importamos librerias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f63bd2da",
    "metadata": {},
    "outputs": [],
@@ -18,10 +26,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from typing import List\n",
+    "from typing import List \n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57d4275f",
+   "metadata": {},
+   "source": [
+    "## Preprarar los datos y el pipeline"
    ]
   },
   {
@@ -205,6 +221,14 @@
     "print(f'Tamaño del conjunto de entrenamiento: {len(df_train)}')\n",
     "print(f'Tamaño del conjunto de validación: {len(df_val)}')\n",
     "print(f'Tamaño del conjunto de prueba: {len(df_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c5aaad",
+   "metadata": {},
+   "source": [
+    "Separamos la variable objetivo de cada set de datos"
    ]
   },
   {
@@ -398,28 +422,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "8249d231",
+   "cell_type": "markdown",
+   "id": "526d04dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "actividades_extracurriculares_ord\n",
-       "Algunas veces         65\n",
-       "Nunca                 62\n",
-       "Sí, frecuentemente    34\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "X_train['actividades_extracurriculares_ord'].value_counts()"
+    "### Pipeline\n",
+    "Necesitamos crear un pipeline que tomme el cada columna y la procese de la forma correcta\n",
+    "Tenemos variables binerias; como *reprobo_materia*; que con 1 y 0 basta.\n",
+    "Variables ordinales; como *satisfaccion_servicios_ord* que requiere valores ordinales (del 1 al 4).\n",
+    "Y variables categoricas; *impacto_laboral_ord*; como  que necesitan un procesado de OneHotEncoding para funcionar correctamente.\n",
+    "\n",
+    "Al final se aplicara una estandarización para optimizar el funcionamiento de un modelo de maquina de soporte vectorial (SVM).\n",
+    "\n",
+    "Cada variable y su propecemiento están mas detallados en [encoding_svm_bayes.json](agent/encoding_svm_bayes.json)."
    ]
   },
   {
@@ -480,6 +495,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d74926b",
+   "metadata": {},
+   "source": [
+    "Verificamos la forma que nos devuelve el pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "aef74ce7",
@@ -537,6 +560,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24540d82",
+   "metadata": {},
+   "source": [
+    "Codificamos cada set de datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "id": "e55772f7",
@@ -577,161 +608,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "0d551745",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dificultades_economicas_bin_bin</th>\n",
-       "      <th>reprobo_materias_bin_bin</th>\n",
-       "      <th>semestre_ord</th>\n",
-       "      <th>apoyo_institucional_ord</th>\n",
-       "      <th>satisfaccion_servicios_ord</th>\n",
-       "      <th>actividades_extracurriculares_ord</th>\n",
-       "      <th>empleo_ord_Sí, medio tiempo</th>\n",
-       "      <th>empleo_ord_Sí, tiempo completo</th>\n",
-       "      <th>impacto_laboral_ord_No afecta/No trabajo</th>\n",
-       "      <th>impacto_laboral_ord_Sí, mucho</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>-0.613244</td>\n",
-       "      <td>1.799123</td>\n",
-       "      <td>-1.371719</td>\n",
-       "      <td>-0.024329</td>\n",
-       "      <td>-0.967849</td>\n",
-       "      <td>-1.098012</td>\n",
-       "      <td>-0.680908</td>\n",
-       "      <td>-0.270801</td>\n",
-       "      <td>0.791368</td>\n",
-       "      <td>-0.283790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>1.630672</td>\n",
-       "      <td>1.799123</td>\n",
-       "      <td>0.905051</td>\n",
-       "      <td>-0.024329</td>\n",
-       "      <td>0.574960</td>\n",
-       "      <td>0.231160</td>\n",
-       "      <td>1.468626</td>\n",
-       "      <td>-0.270801</td>\n",
-       "      <td>-1.263635</td>\n",
-       "      <td>-0.283790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>-0.613244</td>\n",
-       "      <td>-0.555826</td>\n",
-       "      <td>0.905051</td>\n",
-       "      <td>1.934141</td>\n",
-       "      <td>2.117768</td>\n",
-       "      <td>-1.098012</td>\n",
-       "      <td>1.468626</td>\n",
-       "      <td>-0.270801</td>\n",
-       "      <td>-1.263635</td>\n",
-       "      <td>3.523729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>-0.613244</td>\n",
-       "      <td>-0.555826</td>\n",
-       "      <td>0.905051</td>\n",
-       "      <td>-1.982798</td>\n",
-       "      <td>-0.967849</td>\n",
-       "      <td>-1.098012</td>\n",
-       "      <td>-0.680908</td>\n",
-       "      <td>-0.270801</td>\n",
-       "      <td>0.791368</td>\n",
-       "      <td>-0.283790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>-0.613244</td>\n",
-       "      <td>-0.555826</td>\n",
-       "      <td>0.905051</td>\n",
-       "      <td>1.934141</td>\n",
-       "      <td>0.574960</td>\n",
-       "      <td>0.231160</td>\n",
-       "      <td>-0.680908</td>\n",
-       "      <td>-0.270801</td>\n",
-       "      <td>0.791368</td>\n",
-       "      <td>-0.283790</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     dificultades_economicas_bin_bin  reprobo_materias_bin_bin  semestre_ord  \\\n",
-       "217                        -0.613244                  1.799123     -1.371719   \n",
-       "104                         1.630672                  1.799123      0.905051   \n",
-       "19                         -0.613244                 -0.555826      0.905051   \n",
-       "129                        -0.613244                 -0.555826      0.905051   \n",
-       "84                         -0.613244                 -0.555826      0.905051   \n",
-       "\n",
-       "     apoyo_institucional_ord  satisfaccion_servicios_ord  \\\n",
-       "217                -0.024329                   -0.967849   \n",
-       "104                -0.024329                    0.574960   \n",
-       "19                  1.934141                    2.117768   \n",
-       "129                -1.982798                   -0.967849   \n",
-       "84                  1.934141                    0.574960   \n",
-       "\n",
-       "     actividades_extracurriculares_ord  empleo_ord_Sí, medio tiempo  \\\n",
-       "217                          -1.098012                    -0.680908   \n",
-       "104                           0.231160                     1.468626   \n",
-       "19                           -1.098012                     1.468626   \n",
-       "129                          -1.098012                    -0.680908   \n",
-       "84                            0.231160                    -0.680908   \n",
-       "\n",
-       "     empleo_ord_Sí, tiempo completo  impacto_laboral_ord_No afecta/No trabajo  \\\n",
-       "217                       -0.270801                                  0.791368   \n",
-       "104                       -0.270801                                 -1.263635   \n",
-       "19                        -0.270801                                 -1.263635   \n",
-       "129                       -0.270801                                  0.791368   \n",
-       "84                        -0.270801                                  0.791368   \n",
-       "\n",
-       "     impacto_laboral_ord_Sí, mucho  \n",
-       "217                      -0.283790  \n",
-       "104                      -0.283790  \n",
-       "19                        3.523729  \n",
-       "129                      -0.283790  \n",
-       "84                       -0.283790  "
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame(X_train_prep, columns=all_cols, index=X_train.index).head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c838a4d4",
    "metadata": {},
@@ -740,8 +616,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1018b85",
+   "metadata": {},
+   "source": [
+    "Creamos un primer modelo de SVM, y hacemos pruebas locales."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "cc224d4a",
    "metadata": {},
    "outputs": [
@@ -1479,6 +1363,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3caf44d4",
+   "metadata": {},
+   "source": [
+    "Evaluamos el modelo.\n",
+    "\n",
+    "A pesa de tener un f1 score más alto, no suele generalizar bien en otras pruebas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "id": "fcbe6837",
@@ -1532,7 +1426,8 @@
    "id": "a58749b0",
    "metadata": {},
    "source": [
-    "Buesqueda del mejor modelo"
+    "### Buesqueda aleatoria del mejor modelo\n",
+    "Usaremos la clase RandomizedSearchCV de skelarn para probar multiples configuraciones del modelo para encontrar el más óptimo.`"
    ]
   },
   {
@@ -2398,6 +2293,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "341b60a3",
+   "metadata": {},
+   "source": [
+    "Aqui tenemos los parametros que mejor se adaptaron al conunto de datos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "id": "767f8eb8",
@@ -2424,6 +2327,14 @@
    "metadata": {},
    "source": [
     "### SVM optimizado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3506c71c",
+   "metadata": {},
+   "source": [
+    "Ahora creamos el modelo con los mejores parámetros, lo validaremos y probaremos."
    ]
   },
   {
@@ -3137,6 +3048,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0818c595",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "97b0c8f7",
@@ -3180,10 +3097,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "958c13b0",
+   "metadata": {},
+   "source": [
+    "El modelo parece tener un f1 score inferior en la validación, pero un valor más alto en prueba. \n",
+    "El modelo se considerá que si generaliza correctamente y se aceptará para la siguiente fase de desarrollo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "072019ea",
    "metadata": {},
    "source": [
     "## Exportar modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "960921cd",
+   "metadata": {},
+   "source": [
+    "Para exportar el modelo usaremos la librería joblib, para guardar el estado de la instacia y poder acceder desde otro código.\n",
+    "Es importante considerar que se requerirán importar todas las librerías que se usaron en la creación del objeto en el nuevo proyecto.\n",
+    "Con importar con ```from sklearn.svm import SVC``` es suficiente para este modelo."
    ]
   },
   {
@@ -3314,6 +3250,19 @@
    ],
    "source": [
     "joblib.dump(pipeline, './modelos/svm_preprocessor.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4f4e439",
+   "metadata": {},
+   "source": [
+    "De la misma forma que el anterior usamos la librería joblib.\n",
+    "\n",
+    "**IMPORTANTE**\n",
+    "En un nuevo proyecto debemos importar las librerías usadas para la creación del pipeline, inlcuyendo **Librerias base, clases y modulos personalizados**\n",
+    "\n",
+    "Ademas de dependencias de *sklearn* debemos importar también el código del pipeline [Pipeline](./svm_luminaria.ipynb/#pipeline), o el módulo auxiliar [pipeline_luminaria_aux.py](pipeline_luminaria_aux.py) .\n"
    ]
   }
  ],
